--- a/TurfWar_testing_2/UserSettings/Search.settings
+++ b/TurfWar_testing_2/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "project settings"
+	"last_search.DA949528" = "kerning"
 	"OpenInspectorPreview.DA949528" = "0"
 	"currentGroup.DA949528" = "all"
 }
@@ -56,6 +56,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"k"
 	"c"
 	"pr"
 	"t"
